[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/default.tres" type="DynamicFont" id=1]
[ext_resource path="res://entities/player/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/crosshair179.png" type="Texture" id=3]
[ext_resource path="res://addons/Key Prompts System GDScript/KeyPrompt.tscn" type="PackedScene" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -252.0
mouse_filter = 2
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 220.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 40.0
mouse_filter = 2
custom_constants/separation = 16

[node name="IconTextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_bottom = 40.0
mouse_filter = 2

[node name="ItemNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 16.0
margin_right = 16.0
margin_bottom = 40.0
size_flags_vertical = 1

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1856.0
margin_bottom = 84.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1856.0
margin_bottom = 168.0

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBox"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )

[node name="KeyPrompt" parent="MarginContainer/VBoxContainer/HBox/Control" instance=ExtResource( 4 )]
position = Vector2( 38, 40 )
ACTION = "interact"
KEYBOARD_FRAMES_JSON_PATH = "res://addons/Key Prompts System GDScript/ButtonPromptTextures/keyboardFrames.json"
PS4_FRAMES_JSON_PATH = "res://addons/Key Prompts System GDScript/ButtonPromptTextures/ps4Frames.json"
XBOX_ONE_FRAMES_JSON_PATH = "res://addons/Key Prompts System GDScript/ButtonPromptTextures/xboxOneFrames.json"
LIGHT_THEMED_KEYBRD_KEYS = true

[node name="InteraactionLabel" type="Label" parent="MarginContainer/VBoxContainer/HBox"]
margin_left = 84.0
margin_top = 20.0
margin_right = 84.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0, 1, 0, 0.2 )

[node name="Crosshair" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="Crosshair"]
margin_left = 928.0
margin_top = 508.0
margin_right = 992.0
margin_bottom = 572.0
mouse_filter = 2
texture = ExtResource( 3 )
